Footer update + translations

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -2,3 +2,19 @@ Home : Accueil
 About : À Propos
 Contact : Contact
 Account : Compte
+All Rights Reserved : Tous les droits sont réservés
+Participation : Participation
+General conditions : Conditions Générales
+Privacy policy : Politique et Confidentialité 
+Our Products : Nos Produits
+Green Tea : Thé Vert
+black Tea : Thé Noir
+Infusion : Infusion
+Flavored Tea : Thé Aromatisé
+Bio Tea : Thé Bio
+Join Our Newsletter : Rejoignez notre newsletter
+Subscribe : S'abonner
+Phone : Téléphone
+Email : Email
+Newsletter_description : Restez à jour avec les dernières tendances en matière de thé artisanal et bio grâce à notre newsletter.
+Useful Links : Liens utiles
