About  Page + translations

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -18,3 +18,13 @@ Phone : Phone
 Email : Email
 Newsletter_description : Stay up to date with the latest trends in artisanal and organic tea with our newsletter.
 Useful Links : Useful Links
+About Us : About Us
+Blog : Blog
+About_description : Our business is more than just a tea business. Learn more about our mission and values.
+Our History : Our History
+Products : Products
+Experiences : Experiences
+Producers : Producers
+Stores : Stores
+Testimonials : Testimonials
+What are they saying : What are they saying
