--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -18,3 +18,13 @@ Phone : Téléphone
 Email : Email
 Newsletter_description : Restez à jour avec les dernières tendances en matière de thé artisanal et bio grâce à notre newsletter.
 Useful Links : Liens utiles
+About Us : À propos de nous
+Blog : Blog
+About_description : Notre entreprise est plus qu'un simple commerce de thé. Apprenez-en plus sur notre mission et nos valeurs.
+Our History : Notre Histoire
+Products : Produits
+Experiences : Expériences
+Producers :  Producteurs 
+Stores : Boutiques
+Testimonials : Témoignages
+What are they saying : Que disent-ils de nous
